--- a/styles/globals.css
+++ b/styles/globals.css
@@ -196,14 +196,16 @@ body {
   }
 }
 
-/* GPU acceleration booster to prevent mobile scrolling graphics flicker */
-.force-gpu {
-  transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  perspective: 1000;
-  -webkit-perspective: 1000;
+/* GPU acceleration booster to prevent scrolling graphics flicker */
+@media (min-width: 768px) {
+  .force-gpu {
+    transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    perspective: 1000;
+    -webkit-perspective: 1000;
+  }
 }
 
 .text-pretty { color: rgba(255,255,255,0.85); }
